# simulations

./: .clang-format  .gitignore  CMakeLists.txt
docs/: srs.md
include/: Carnivore.h  Config.h  Entity.h  EnvConfig.h  Environment.h  Herbivore.h  Physics.h  Rendering.h  Resource.h  math_utils.h  utils.h
include/Environement/: Carnivore.h  Entity.h  Environment.h  Herbivore.h  Resource.h
include/Physics/: Physics.h
include/Rendering/: DrawablePhysics.h  EntityRenderer.h  Rendering.h  UI.h
include/utils/: math_utils.h  utils.h
scripts/: b_and_run.sh  config-build.sh  generate_profile_png.sh  generate_profile_txt.sh
src/: Aliases.h  Config.cpp  Config.h  EnvConfig.cpp  EnvConfig.h  main.cpp
src/controller/: SimulationController.cpp  SimulationController.h
src/model/Entity/: Carnivore.cpp  Carnivore.h  Entity.cpp  Entity.h  Herbivore.cpp  Herbivore.h  Resource.cpp  Resource.h
src/model/Environment/: Environment.cpp  Environment.h
src/model/Physics/: Physics.cpp  Physics.h  SpatialHashGrid.cpp  SpatialHashGrid.h
src/utils/: math_utils.h  utils.h
src/view/Rendering/: DrawablePhysics.cpp  DrawablePhysics.h  EntityRenderer.cpp  EntityRenderer.h  Rendering.cpp  Rendering.h  UI.cpp  UI.h
src/view/UI/: UI.cpp  UI.h
tests/: CMakeLists.txt
tests/unit/: EntityTest.cpp  PhysicsTest.cpp
